# url-shortener-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  init.cql
src/: main.rs
