[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scylla = "0.7"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
rand = "0.8"
rand_chacha = "0.3"
blake3 = "1.5"